--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <nav>
         <a href="index.html">HOME</a>
-        <a href="services.html">OUR SERVICES</a>
-        <a href="location.html">OUR LOCATION</a>
-        <a href="contacts.html">CONTACT US</a>
-        <a href="about.html">ABOUT US</a>
+        <a href="services.html">SERVICES</a>
+        <a href="location.html">LOCATION</a>
+        <a href="contacts.html">CONTACTS</a>
+        <a href="about.html">ABOUT-US</a>
     </nav>
 
     <div></div>
