--- a/services.html
+++ b/services.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
     <nav>
         <a href="index.html">HOME</a>
-        <a href="services.html">OUR SERVICES</a>
-        <a href="location.html">OUR LOCATION</a>
-        <a href="contacts.html">CONTACT US</a>
-        <a href="about.html">ABOUT US</a>
+        <a href="services.html">SERVICES</a>
+        <a href="location.html">LOCATION</a>
+        <a href="contacts.html">CONTACTS</a>
+        <a href="about.html">ABOUT-US</a>
     </nav>
 
     <div></div>
