--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="div_container">
     
-    <nav>
+    <div class="div_nav">
         <a href="index.html">HOME</a>
         <a href="services.html">SERVICES</a>
-        <a href="location.html">LOCATION</a>
         <a href="contacts.html">CONTACTS</a>
-        <a href="about.html">ABOUT-US</a>
-    </nav>
+        <a href="location.html">LOCATION</a>
 
-    <div></div>
-    <footer></footer>
-    
+    </div>
+
+    <div class="div_main"></div>
+
+       <footer>
+        <a href="about.html">ABOUT-US</a>
+    </footer>
+
+    </div>
 </body>
 </html>
