--- a/index.html
+++ b/index.html
@@ -10,18 +10,27 @@
   <div class="div_container">
     
     <div class="div_nav">
-        <a href="index.html">HOME</a>
-        <a href="services.html">SERVICES</a>
-        <a href="contacts.html">CONTACTS</a>
-        <a href="location.html">LOCATION</a>
+        <a class="a_tag_nav" href="index.html">HOME</a>
+        <a class="a_tag_nav"  href="services.html">SERVICES</a>
+        <a class="a_tag_nav"  href="contacts.html">CONTACTS</a>
 
     </div>
 
     <div class="div_main"></div>
 
        <footer>
-        <a href="about.html">ABOUT-US</a>
-    </footer>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="" alt=""></a>
+        <a class="a_tag_nav" href="about.html">ABOUT-US</a>
+        </footer>
 
     </div>
 </body>
