--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
         <a href="about.html">ABOUT-US</a>
     </nav>
 
-    <div></div>
+    <div>
+         <a href="location.html">LOCATION</a>
+    </div>
     <footer></footer>
     
 </body>
