--- a/about.html
+++ b/about.html
@@ -7,19 +7,43 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="div_container">
     
-    <nav>
-        <a href="index.html">HOME</a>
-        <a href="services.html">SERVICES</a>
-        <a href="location.html">LOCATION</a>
-        <a href="contacts.html">CONTACTS</a>
-        <a href="about.html">ABOUT-US</a>
-    </nav>
+    <div class="div_nav">
+        <a class="a_tag_nav" href="index.html">HOME</a>
+        <a class="a_tag_nav"  href="services.html">SERVICES</a>
+        <a class="a_tag_nav"  href="contacts.html">CONTACTS</a>
 
-    <div>
-         <a href="location.html">LOCATION</a>
     </div>
-    <footer></footer>
-    
+
+    <div class="div_main">
+        <h1>
+            About Us
+        </h1>
+        <p>
+At Collins nail salon, we believe that beauty begins at your fingertips. 
+Our salon is dedicated to providing high-quality nail care services 
+in a relaxing and welcoming environment. <br><br>
+Whether you're looking for a classic manicure, trendy nail art,
+or luxurious spa treatments, our experienced technicians are here 
+to bring your vision to life.<br><br>
+We use only top-quality products to ensure your nails stay healthy and stunning.
+At the heart of our salon 
+is a commitment to cleanliness, creativity, and customer
+satisfaction—because you deserve to look and feel your best with every visit.
+        </p>
+        <br><br>
+        <h3>For our location click the below button.</h3>
+        <a class="a_tag_nav" href="location.html">Our Location</a>
+    </div>
+
+       <footer>
+        <a href="https://www.facebook.com/"><img src="Vids & Images/facebook-logo.webp" alt=""></a>
+        <a href="https://www.instagram.com"><img src="Vids & Images/instagram-app-icon.avif" alt=""></a>
+        <a href="https://www.whatsapp.com"><img src="Vids & Images/whatsapp-icon.jpeg" alt=""></a>
+        <a class="a_tag_nav" href="about.html">ABOUT-US</a>
+        </footer>
+
+    </div>
 </body>
 </html>
