--- a/index.html
+++ b/index.html
@@ -19,16 +19,9 @@
     <div class="div_main"></div>
 
        <footer>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
+        <a href="https://www.facebook.com/"><img src="Vids & Images/facebook-logo.webp" alt=""></a>
+        <a href="https://www.instagram.com"><img src="Vids & Images/instagram-app-icon.avif" alt=""></a>
+        <a href="https://www.whatsapp.com"><img src="Vids & Images/whatsapp-icon.jpeg" alt=""></a>
         <a class="a_tag_nav" href="about.html">ABOUT-US</a>
         </footer>
 
