--- a/location.html
+++ b/location.html
@@ -7,17 +7,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="div_container">
     
-    <nav>
-        <a href="index.html">HOME</a>
-        <a href="services.html">SERVICES</a>
-        <a href="location.html">LOCATION</a>
-        <a href="contacts.html">CONTACTS</a>
-        <a href="about.html">ABOUT-US</a>
-    </nav>
+    <div class="div_nav">
+        <a class="a_tag_nav" href="index.html">HOME</a>
+        <a class="a_tag_nav"  href="services.html">SERVICES</a>
+        <a class="a_tag_nav"  href="contacts.html">CONTACTS</a>
 
-    <div></div>
-    <footer></footer>
-    
+    </div>
+
+    <div class="div_main">
+     <h2>Visit Our Nail Salon</h2>
+    <iframe 
+      class="map-frame"
+      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3593.761699373592!2d28.184667999999984!3d-25.745393000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sza!4v1747509742463!5m2!1sen!2sza"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    </div>
+
+       <footer>
+        <a href="https://www.facebook.com/"><img src="Vids & Images/facebook-logo.webp" alt=""></a>
+        <a href="https://www.instagram.com"><img src="Vids & Images/instagram-app-icon.avif" alt=""></a>
+        <a href="https://www.whatsapp.com"><img src="Vids & Images/whatsapp-icon.jpeg" alt=""></a>
+        <a class="a_tag_nav" href="about.html">ABOUT-US</a>
+        </footer>
+
+    </div>
 </body>
 </html>
