--- a/services.html
+++ b/services.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="div_container">
     
-    <nav>
-        <a href="index.html">HOME</a>
-        <a href="services.html">SERVICES</a>
-        <a href="location.html">LOCATION</a>
-        <a href="contacts.html">CONTACTS</a>
-        <a href="about.html">ABOUT-US</a>
-    </nav>
+    <div class="div_nav">
+        <a class="a_tag_nav" href="index.html">HOME</a>
+        <a class="a_tag_nav"  href="services.html">SERVICES</a>
+        <a class="a_tag_nav"  href="contacts.html">CONTACTS</a>
 
-    <div></div>
-    <footer></footer>
-    
+    </div>
+
+    <div class="div_main"></div>
+
+       <footer>
+        <a href="https://www.facebook.com/"><img src="Vids & Images/facebook-logo.webp" alt=""></a>
+        <a href="https://www.instagram.com"><img src="Vids & Images/instagram-app-icon.avif" alt=""></a>
+        <a href="https://www.whatsapp.com"><img src="Vids & Images/whatsapp-icon.jpeg" alt=""></a>
+        <a class="a_tag_nav" href="about.html">ABOUT-US</a>
+        </footer>
+
+    </div>
 </body>
 </html>
